Fixed jump

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     top: 100px;
   }
   100% {
-    left: 150px;
+    top: 150px;
   }
 }
 
@@ -49,7 +49,7 @@ body {
 
 /**Animation class for the jump**/
 .animate {
-  animation: jump 500ms;
+  animation: jump 300ms linear;
 }
 
 #game {
